--- a/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
@@ -210,16 +210,45 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="602"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZgR-2S-urd">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="160.66666666666666"/>
-                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="108.33333333333333"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select opponent" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAy-Rs-gkm">
+                                                <rect key="frame" x="0.0" y="10" width="414" height="36.333333333333336"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
+                                                <color key="textColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qx9-GZ-Cab">
+                                                <rect key="frame" x="62" y="62.333333333333329" width="290" height="30"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="Rvl-fY-3DY"/>
+                                                </constraints>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="qx9-GZ-Cab" secondAttribute="bottom" constant="16" id="A3d-pY-XmW"/>
+                                            <constraint firstItem="bAy-Rs-gkm" firstAttribute="top" secondItem="ZgR-2S-urd" secondAttribute="top" constant="10" id="AyH-IR-wh7"/>
+                                            <constraint firstItem="qx9-GZ-Cab" firstAttribute="centerX" secondItem="ZgR-2S-urd" secondAttribute="centerX" id="GCF-5W-aOZ"/>
+                                            <constraint firstItem="qx9-GZ-Cab" firstAttribute="top" secondItem="bAy-Rs-gkm" secondAttribute="bottom" constant="16" id="KIG-kl-Qc2"/>
+                                            <constraint firstItem="qx9-GZ-Cab" firstAttribute="width" secondItem="ZgR-2S-urd" secondAttribute="width" multiplier="0.7" id="UEC-2k-hvn"/>
+                                            <constraint firstAttribute="trailing" secondItem="bAy-Rs-gkm" secondAttribute="trailing" id="ZOT-wA-LT1"/>
+                                            <constraint firstItem="bAy-Rs-gkm" firstAttribute="width" secondItem="ZgR-2S-urd" secondAttribute="width" id="bKo-eo-I8J"/>
+                                            <constraint firstItem="bAy-Rs-gkm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZgR-2S-urd" secondAttribute="leading" id="xi1-as-tUs"/>
+                                        </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ro5-sk-NpZ">
-                                        <rect key="frame" x="0.0" y="160.66666666666666" width="414" height="441.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="108.33333333333334" width="414" height="493.66666666666663"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="ZgR-2S-urd" firstAttribute="height" secondItem="UYW-SZ-09u" secondAttribute="height" multiplier="0.16" constant="64" id="ox7-8c-KE2"/>
+                                    <constraint firstItem="ZgR-2S-urd" firstAttribute="centerX" secondItem="UYW-SZ-09u" secondAttribute="centerX" id="9Ix-9i-iWZ"/>
+                                    <constraint firstItem="ZgR-2S-urd" firstAttribute="height" secondItem="UYW-SZ-09u" secondAttribute="height" multiplier="0.18" id="ox7-8c-KE2"/>
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dHA-KI-6g4">
@@ -251,6 +280,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="backButton" destination="O2N-g6-s8u" id="syA-Tb-NVr"/>
+                        <outlet property="searchOpponentTextField" destination="qx9-GZ-Cab" id="IKB-8R-9cY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6LW-xK-plT" userLabel="First Responder" sceneMemberID="firstResponder"/>
