--- a/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
+++ b/BibleBeatMe/Layouts/Base.lproj/Main.storyboard
@@ -331,6 +331,7 @@
                         <outlet property="backButton" destination="O2N-g6-s8u" id="syA-Tb-NVr"/>
                         <outlet property="searchOpponentTextField" destination="qx9-GZ-Cab" id="IKB-8R-9cY"/>
                         <outlet property="tableView" destination="Ro5-sk-NpZ" id="FfA-sf-hEZ"/>
+                        <segue destination="OuT-sc-WyH" kind="modal" identifier="showOpponent" id="zwm-Av-pDo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6LW-xK-plT" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -344,17 +345,50 @@
                     <view key="view" contentMode="scaleToFill" id="wMv-I1-The">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m71-iO-yKk">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OpponentName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glp-Vy-WWz">
+                                        <rect key="frame" x="117.5" y="15.5" width="139.5" height="23"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
+                                        <color key="textColor" red="0.80000000000000004" green="0.0" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="glp-Vy-WWz" firstAttribute="centerY" secondItem="m71-iO-yKk" secondAttribute="centerY" id="CsX-BL-Krw"/>
+                                    <constraint firstItem="glp-Vy-WWz" firstAttribute="centerX" secondItem="m71-iO-yKk" secondAttribute="centerX" id="fva-JF-l7D"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="eSK-dl-MP4" firstAttribute="bottom" secondItem="m71-iO-yKk" secondAttribute="bottom" constant="549" id="KbR-jS-jnl"/>
+                            <constraint firstItem="eSK-dl-MP4" firstAttribute="trailing" secondItem="m71-iO-yKk" secondAttribute="trailing" id="OjB-34-MgM"/>
+                            <constraint firstItem="m71-iO-yKk" firstAttribute="top" secondItem="eSK-dl-MP4" secondAttribute="top" id="n68-Ec-xks"/>
+                            <constraint firstItem="m71-iO-yKk" firstAttribute="leading" secondItem="eSK-dl-MP4" secondAttribute="leading" id="qbr-ou-pDI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="eSK-dl-MP4"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Competition" id="hRO-On-41z">
                         <barButtonItem key="backBarButtonItem" title="Back" id="FN5-X6-mlN"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="jFh-9C-NU5">
+                            <connections>
+                                <action selector="backToOpponents:" destination="j0p-aQ-kfc" id="B2p-dE-zvu"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="backButton" destination="jFh-9C-NU5" id="tC7-7Q-dMc"/>
+                        <outlet property="opponentName" destination="glp-Vy-WWz" id="uEk-qh-ewd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lX8-Bg-OsF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3071" y="124"/>
+            <point key="canvasLocation" x="3069.5999999999999" y="123.68815592203899"/>
         </scene>
         <!--Practice Navigation-->
         <scene sceneID="VZC-3R-Gae">
@@ -823,6 +857,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OuT-sc-WyH" customClass="ModalNavigationController" customModule="BibleBeatMe" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="MjZ-2j-zLJ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="qOx-rl-XLB">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
